Bug 351969 nsImageDocument image scaling should never scale a dimension to 0px r=biesi sr=jst